@@ -1,9 +1,9 @@
-module HTML#:nodoc:
-  module Version#:nodoc:
+module HTML #:nodoc:
+  module Version #:nodoc:
 
     MAJOR = 0
     MINOR = 5
-    TINY  = 0
+    TINY  = 1
 
     STRING = [ MAJOR, MINOR, TINY ].join(".")
 
